<resources xmlns:tools="http://schemas.android.com/tools">
   <!-- <string name="app_name">NewsFeed</string> -->

    <string name="app_name">Prachar Bongo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prachar Bongo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Local">Local</string>
    <string name="State">State</string>
    <string name="Country">Country</string>
    <string name="International">International</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Sports">Sports</string>
    <string name="Job">Job</string>
    <string name="Health">Health</string>
    <string name="Library">Library</string>
    <string name="Editors">Editors</string>
    <string name="Advertisements">Advertisements</string>


    //-----language select string
    <string name="select_language_title">Select Language</string>
    <string name="select_language_checkbox">Remember my selection</string>
    <string name="select_language_cancel">Cancel</string>
    <string name="select_language_ok">Ok</string>

    //------search popup strings
    <string name="search_popup_title">Search</string>
    <string name="search_popup_hint">Enter here</string>
    <string name="search_popup_cancel">Cancel</string>
    <string name="search_popup_search">Search</string>

    //---activity_main strings
    <string name="recycler_list_no_data">No Data to show</string>

    //----activity_main_profile_alert_dialog strings
    <string name="activity_main_profile_alert_dialog_message">Profile View is not available for you</string>
    <string name="activity_main_profile_alert_title">Profile Alert!</string>

    //----activity_video_home strings
    <string name="activity_video_home_name">Name :</string>
    <string name="activity_video_home_name_hint">Enter your name</string>
    <string name="activity_video_home_email">Email :</string>
    <string name="activity_video_home_email_hint">Enter your email</string>
    <string name="activity_video_home_mobile">Mobile :</string>
    <string name="activity_video_home_mobile_hint">Enter your mobile number</string>
    <string name="activity_video_home_title">Title :</string>
    <string name="activity_video_home_title_hint">Enter title</string>
    <string name="activity_video_home_btn_video">Capture Video</string>
    <string name="activity_video_home_btn_image">Capture Image</string>
    <string name="activity_video_home_btn_browse">Browse</string>
    <string name="activity_video_home_txt_submit">Submit</string>

    //---activity_profile_popup strings
    <string name="activity_profile_popup_title">Profile</string>
    <string name="activity_profile_popup_name_title">Name :</string>
    <string name="activity_profile_popup_email_title">Email :</string>
    <string name="activity_profile_popup_mobile_title">Mobile :</string>
</resources>