<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_local"
            android:title="@string/Local" />
        <item
            android:id="@+id/nav_state"
            android:title="@string/State" />
        <item
            android:id="@+id/nav_country"
            android:title="@string/Country" />
        <item
            android:id="@+id/nav_international"
            android:title="@string/International" />
        <item
            android:id="@+id/nav_entertainment"
            android:title="@string/Entertainment" />
        <item
            android:id="@+id/nav_sports"
            android:title="@string/Sports" />
        <item
            android:id="@+id/nav_job"
            android:title="@string/Job" />
        <item
            android:id="@+id/nav_health"
            android:title="@string/Health" />
        <item
            android:id="@+id/nav_library"
            android:title="@string/Library" />
        <item
            android:id="@+id/nav_editors"
            android:title="@string/Editors" />
        <item
            android:id="@+id/nav_advertisement"
            android:title="@string/Advertisements" />
    </group>
</menu>